Fix title overflow on desktop

--- a/app/routes/overview/components/EventItem.css
+++ b/app/routes/overview/components/EventItem.css
@@ -86,6 +86,7 @@
   letter-spacing: 2px;
   text-transform: uppercase;
   word-break: break-word;
+  overflow: hidden;
 
   @media (--mobile-device) {
     height: auto;
